@@ -746,5 +746,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.2.2"
+  "version": "3.2.2.3"
 }
