@@ -4,6 +4,7 @@ Changelog Bypass Paywalls Clean - Chrome
 Post-release
 Add Groupe ESH Medias (ch)
 Fix Beobachter.ch & Handelszeitung.ch
+Fix Foreign Policy (Insider)
 
 * v3.2.2.0 (2023-06-25)
 Add Follow the Money (Ftm.eu)
